--- a/bookmarklet.cafehelper.css
+++ b/bookmarklet.cafehelper.css
@@ -3,15 +3,26 @@
     margin: 0;
 }
 #cafeBookmarkletHelper{
-    width: 300px;
+    width: 200px;
     background: #727272;
     position: fixed;
     top: 10px;
     right: 10px;
     z-index: 100;
     overflow: auto;
+    -moz-transition: width 0.2s;
+    -webkit-transition: width 0.2s;
+    -o-transition: width 0.2s;
+    transition: width 0.2s;
 }
 
+#cafeBookmarkletHelper.helperExpanded{
+    width: 500px;
+    -moz-transition: width 0.2s;
+    -webkit-transition: width 0.2s;
+    -o-transition: width 0.2s;
+    transition: width 0.2s;
+}
 #cafeBookmarkletHelper h2{
     font-size: 14px;
     cursor: pointer;
